--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 @import url(//db.onlinewebfonts.com/c/26f7bcdf8d188588f4744e5b49d12d6a?family=evfont);
 @font-face {font-family: "evfont"; src: url("//db.onlinewebfonts.com/t/26f7bcdf8d188588f4744e5b49d12d6a.eot"); src: url("//db.onlinewebfonts.com/t/26f7bcdf8d188588f4744e5b49d12d6a.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/26f7bcdf8d188588f4744e5b49d12d6a.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/26f7bcdf8d188588f4744e5b49d12d6a.woff") format("woff"), url("//db.onlinewebfonts.com/t/26f7bcdf8d188588f4744e5b49d12d6a.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/26f7bcdf8d188588f4744e5b49d12d6a.svg#evfont") format("svg"); }
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: evfont;
-    background-color: lightskyblue;
+    /* background-color: lightskyblue; */
     white-space: normal;
+    font: 400 .9em/1.5 "Nobile", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #104c5f;
+    background: #bae5f6;
+    background-image: url('../img/background.png');
 }
 
 main > div{
@@ -20,7 +32,6 @@ textarea {
     width: auto;
     height: 35px;
 }
-
 
 .tweetBtn {
     background-color: transparent;
@@ -83,4 +94,41 @@ ul li {list-style-type: none;}
     margin-top: 30px;
     border: 1px solid black;
     height: 350px;
+}
+
+/* floating clouds */
+.cloud-container {
+    position: absolute;
+    width: 100%;
+}
+
+h1 {
+    /* margin-top: 20px;
+    margin-bottom: 20px; */
+    font-weight: 700;
+    font-size: 65px;
+    letter-spacing: -.01em;
+    color: #0d5f77;
+    display: flex;
+    justify-content: center;
+    
+}
+
+h1 span {
+    font-size: 1.03em;
+    letter-spacing: -.08em;
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+      padding: 40px 35px;
+    }
+    .bird {
+      top: -165px;
+      right: 5px;
+    }
+    h1 {
+      /* margin-top: -105px; */
+      font-size: 60px;
+    }
 }
